--- a/styles.css
+++ b/styles.css
@@ -11,20 +11,20 @@
 }
 
 body {
-  background-color: #393E46;
+  background-color: lightcoral;
 }
 
 h1 {
   margin: 30px;
   font-family: 'Lobster', cursive;
-  text-shadow: 5px 0 #232931;
+  text-shadow: 5px 0 lightcyan;
   font-size: 7.5rem;
-  color: #4ECCA3;
+  color: crimson;
 }
 
 p {
   font-size: 2rem;
-  color: #4ECCA3;
+  color: crimson;
   font-family: 'Indie Flower', cursive;
 }
 
@@ -34,7 +34,7 @@ img {
 
 footer {
   margin-top: 5%;
-  color: #EEEEEE;
+  color: crimson;
   text-align: center;
   font-family: 'Indie Flower', cursive;
 
